# MMSpellbook

./: .gitignore  Cargo.toml  LICENSE  MMSpellbook.gdextension  README.md
docs/: README.md  codes.md  components_list.txt  opcode_list.txt  spell code format.md  spell_attributes_list.txt  spell_code_format.md
docs/Classes/: magical_entity.md  magical_entity_tutorial.md
examples/: config.toml  magical_entity.gd  player.gd  spell.gd
src/: .lib.rs.kate-swp  codes.rs  component_functions.rs  lib.rs  libmmspellbook.rs  magical_entity.rs  main.rs  opcode.rs  saver.rs  spelltranslator.rs
src/codes/: attributecodes.rs  component_specific_codes.rs  componentcodes.rs  datatypes.rs  opcodes.rs  shapecodes.rs
src/opcode/: components.rs  spellcodes.rs
