[package]
name = "mmspellbook"
edition = "2021"
authors = ["CocytusDEDI"]
description = "MMSpellbook (Magic Modelling Spellbook) is a magic system for Godot that allows for the creation of custom spells"

[dependencies]
serde_json = "1.0"
serde = "1.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]
