[package]
name = "mmspellbook"
edition = "2021"
authors = ["CocytusDEDI"]
version = "0.8.0"
description = "MMSpellbook (Magic Modelling Spellbook) is a magic system for Godot that allows for the creation of custom spells"

[dependencies]
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
lazy_static = "1.5"

[lib]
crate-type = ["cdylib"]
